tests/negative/neg_pr1162_removed_representation_clause.safe
package Neg_PR1162_Removed_Representation_Clause

   type Byte is range 0 to 255;

   for Byte'Size use 8;
